@@ -5,7 +5,7 @@ This file is generated! See scripts/docs_collector.py
 [[metricbeat-module-munin]]
 == Munin module
 
-experimental[]
+beta[]
 
 This is the munin module.
 
