@@ -89,8 +89,8 @@ This file is generated! See scripts/docs_collector.py
 .3+| .3+|  |<<metricbeat-metricset-mongodb-collstats,collstats>>   
 |<<metricbeat-metricset-mongodb-dbstats,dbstats>>   
 |<<metricbeat-metricset-mongodb-status,status>>   
-|<<metricbeat-module-munin,Munin>>  experimental[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
-.1+| .1+|  |<<metricbeat-metricset-munin-node,node>> experimental[]  
+|<<metricbeat-module-munin,Munin>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
+.1+| .1+|  |<<metricbeat-metricset-munin-node,node>> beta[]  
 |<<metricbeat-module-mysql,MySQL>>     |image:./images/icon-yes.png[Prebuilt dashboards are available]    |  
 .2+| .2+|  |<<metricbeat-metricset-mysql-galera_status,galera_status>> experimental[]  
 |<<metricbeat-metricset-mysql-status,status>>   
@@ -128,7 +128,7 @@ This file is generated! See scripts/docs_collector.py
 |<<metricbeat-metricset-system-raid,raid>>   
 |<<metricbeat-metricset-system-socket,socket>>   
 |<<metricbeat-metricset-system-uptime,uptime>>   
-|<<metricbeat-module-traefik,traefik>>  experimental[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
+|<<metricbeat-module-traefik,traefik>>  beta[]   |image:./images/icon-no.png[No prebuilt dashboards]    |  
 .1+| .1+|  |<<metricbeat-metricset-traefik-health,health>> experimental[]  
 |<<metricbeat-module-uwsgi,uwsgi>>  beta[]   |image:./images/icon-yes.png[Prebuilt dashboards are available]    |  
 .1+| .1+|  |<<metricbeat-metricset-uwsgi-status,status>> beta[]  
