@@ -1,1 +1,1 @@
-- release: experimental
+- release: beta
